# perplexity-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  client.py  docker-compose.yml  perplexity.py  perplexity_async.py  pyproject.toml  requirements.txt  run.py  start_web_ui.py
.github/workflows/: docker.yml  publish.yml  quality.yml  test.yml
app/: clients.py  main.py  schemas.py  utils.py
docker/: README.md  env.example
docs/: CHANGELOG.md  CLI.md  CONCLUSION.md  CORRECTIONS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  NEXT_STEPS.md
docs/plans/: 2026-01-23-fastapi-wrapper-design.md  2026-01-23-fastapi-wrapper.md
examples/: README.md  account_creation.py  async_usage.py  basic_usage.py  batch_processing.py  cli_usage.sh  file_upload.py  streaming.py
perplexity/: __init__.py  cli.py  client.py  config.py  driver.py  emailnator.py  exceptions.py  labs.py  logger.py  mcp.py  mcp_server.py  models.py  pool.py  utils.py
perplexity_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
perplexity_async/: __init__.py  client.py  emailnator.py  labs.py
tests/: __init__.py  test_api_health.py  test_api_payload.py  test_api_search.py  test_api_stream.py  test_cli.py  test_config.py  test_mcp.py  test_utils.py  verify_implementation.py
